--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -43,17 +43,9 @@
             <div class="email-actions">
                 <button id="btn-refresh" class="btn btn-small">🔄 Refresh</button>
                 <button id="btn-test-connection" class="btn btn-small">🔗 Test Connection</button>
-                <button id="btn-classify-email" class="btn btn-small">🤖 Classify Email</button>
             </div>
         </div>
 
-        <!-- Email Classification Results -->
-        <div id="classification-section" class="section classification-section" style="display: none;">
-            <h3>🤖 AI Classification</h3>
-            <div id="classification-content" class="classification-content">
-                <!-- Classification results will be displayed here -->
-            </div>
-        </div>
 
 
         <!-- AI Conversational Interface - Now Primary -->
@@ -91,6 +83,7 @@
                         <button class="suggestion-btn" data-suggestion="Write a professional email reply to this email">📝 Write Reply</button>
                         <button class="suggestion-btn" data-suggestion="Summarize this email">📄 Summarize</button>
                         <button class="suggestion-btn" data-suggestion="What's the sentiment of this email?">😊 Sentiment</button>
+                        <button class="suggestion-btn" id="classify-email-suggestion" data-suggestion="classify-email">🤖 Classify Email</button>
                     </div>
                 </div>
                 
