--- a/src/commands/commands.html
+++ b/src/commands/commands.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <script>
-        // Empty commands file - not needed for our simplified add-in
-        // This file is referenced in manifest.xml but not actively used
+        // Minimal commands file - required by manifest.xml but not actively used
         Office.onReady(() => {
             console.log('Commands file loaded');
         });
