--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -17,7 +17,7 @@
                 <div class="header-status">
                     <span id="connection-status" title="Service connection status">🔴</span>
                     <div id="status" class="status status-connecting">
-                        <span id="status-text">Starting...</span>
+                        <span id="status-text">Loading...</span>
                     </div>
                 </div>
             </div>
@@ -201,6 +201,6 @@
         document.head.appendChild(style);
     </script>
 
-    <script src="taskpane.js"></script>
+    <!-- Script will be injected by webpack -->
 </body>
 </html>
